[package]
name = "CsTradeUp"
version = "0.1.0"
edition = "2024"
default-run = "CsTradeUp"
build = "build.rs"

[dependencies]
eframe = "0.23"
rusqlite = { version = "0.29", features = ["bundled"] }
winapi = { version = "0.3", features = ["winuser", "windef"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"
base64 = "0.21"
rand = "0.8"

[build-dependencies]
winres = "0.1"
